--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-crud",
+  "name": "angular-course-manager",
   "version": "1.0.0",
   "description": "ANGULAR 9 - TYPESCRIPT - CSS - NODEJS - JSON-SERVER",
   "main": "",
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gilsonmneto/angular-crud.gits"
+    "url": "git+https://github.com/gilsonmneto/angular-course-manager.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gilsonmneto/angular-crud/issues"
+    "url": "https://github.com/gilsonmneto/angular-course-manager/issues"
   },
-  "homepage": "https://github.com/gilsonmneto/angular-crud#readme",
+  "homepage": "https://github.com/gilsonmneto/angular-course-manager#readme",
   "dependencies": {
     "npm-run-all": "^4.1.5"
   }
